src/renderer/src/assets/main.css
@import "./base.css";
@import "./loading.css";

::-webkit-scrollbar {
  width: 5;
}

::-webkit-scrollbar-track {
  background: #f1f1f1;
}

::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 30px;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
}

